--- a/src/python3_course_for_devs/notebooks/memory.ipynb
+++ b/src/python3_course_for_devs/notebooks/memory.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 内存管理\n",
     "\n",
-    "内存管理是由解释器自动处理的，开发者无需显式地进行内存分配和释放。Python 的内存管理机制主要包括以下几个方面：\n"
+    "内存管理由 Python 解释器自动处理，开发者无需显式地进行内存分配和释放。内存管理机制主要包括：\n"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "source": [
     "## 对象缓存优化\n",
     "\n",
-    "针对特定不可变类型对象，在内存中缓存并重用。避免频繁的创建和销毁对象，减少内存分配的开销。\n"
+    "针对特定不可变类型对象在内存中缓存、重用。避免频繁创建/销毁对象，减少内存分配开销。\n"
    ]
   },
   {
@@ -24,12 +24,12 @@
    "source": [
     "**小整数缓存**\n",
     "\n",
-    "小整数（`[-5, 256]`）。\n"
+    "`[-5, 256]` 区间的小整数会被缓存。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "True"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 281,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,12 +55,12 @@
    "source": [
     "**字符串驻留**\n",
     "\n",
-    "部分 `ASCII` 字符组成的字符串。\n"
+    "由字母、数字、下划线组成的字符串会被缓存。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -69,14 +69,14 @@
        "True"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = \"hello_world\"\n",
-    "b = \"hello_world\"\n",
+    "a = \"hello_world_001\"\n",
+    "b = \"hello_world_001\"\n",
     "a is b"
    ]
   },
@@ -84,12 +84,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> `sys.intern` 手动创建驻留字符串。\n"
+    "> `sys.intern` 方法可手动创建驻留字符串。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "True"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 283,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "True"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 284,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,12 +153,17 @@
    "source": [
     "**引用计数**\n",
     "\n",
-    "每当对象被引用时，引用计数加 1；当引用被删除或超出作用域时，引用计数减 1。当引用计数变为 0 时，对象被认为是不再被使用，将被垃圾回收。\n"
+    "每当对象被引用时，引用计数加 1；当引用被删除或超出作用域时，引用计数减 1。\n",
+    "当引用计数变为 0 时，对象将被立即回收。\n",
+    "\n",
+    "> 两个或多个对象之间相互引用形成一个环即为循环引用，引用计数机制无法处理对象循环引用。\n",
+    "\n",
+    "> `sys.getrefcount` 方法可获取对象引用计数。注意 `sys.getrefcount` 方法本身会增加一个对象临时引用。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +172,7 @@
        "2"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,14 +181,14 @@
     "from random import random\n",
     "import sys\n",
     "\n",
-    "x = random()\n",
+    "x = random()  # 生成一个没有被内存缓存的随机数\n",
     "\n",
-    "sys.getrefcount(x)"
+    "sys.getrefcount(x)  # 获取对象引用计数"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -192,18 +197,18 @@
        "24"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sys.getsizeof(x)"
+    "sys.getsizeof(x)  # 获取对象占用内存字节数"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +217,7 @@
        "3"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -234,106 +239,15 @@
        "2"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "del ref\n",
+    "del ref  # 删除一次引用\n",
     "\n",
     "sys.getrefcount(x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**标记-清除**\n",
-    "\n",
-    "- 标记阶段：从根对象开始递归遍历对象图，标记可达对象。\n",
-    "- 清除阶段：标记完成后，垃圾回收器遍历整个内存，找到未标记对象，并释放其内存资源。\n",
-    "\n",
-    "> `可达` 即仍被程序中其他对象所引用。\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 循环引用处理\n",
-    "\n",
-    "两个或多个对象之间相互引用形成一个环即为循环引用，引用计数机制无法处理这种情况。\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**循环垃圾收集器**\n",
-    "\n",
-    "垃圾回收机制中的循环垃圾收集器会定期扫描内存中的对象，当循环引用的对象无法通过引用计数访问到时，垃圾回收机制会将它们标记为待回收对象。\n",
-    "垃圾回收机制会周期性地触发标记-清除算法，回收被标记待回收对象的内存。\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import gc\n",
-    "\n",
-    "\n",
-    "class Node:\n",
-    "    def __init__(self, data):\n",
-    "        self.data = data\n",
-    "        self.next = None\n",
-    "\n",
-    "\n",
-    "# 创建循环引用\n",
-    "node1 = Node(1)\n",
-    "node2 = Node(2)\n",
-    "node1.next = node2\n",
-    "node2.next = node1\n",
-    "\n",
-    "# 显式执行一次垃圾回收\n",
-    "# gc.collect()\n",
-    "\n",
-    "# 检查循环引用是否被清除\n",
-    "print(gc.garbage)  # 输出结果：[]，表示循环引用已被成功清除"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**分代回收策略**\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "分代回收策略（Generational Collection Strategy）是一种常用的垃圾回收策略，用于管理和回收内存中的对象。该策略基于一个观察：大多数对象的生命周期较短，而只有少数对象具有较长的生命周期。因此，分代回收策略将对象根据其存活时间分为不同的代（Generation），并针对不同代采取不同的垃圾回收策略。\n",
-    "\n",
-    "通常，分代回收策略将对象划分为三代：\n",
-    "\n",
-    "1. 第 0 代（Young Generation）：第 0 代包含了新创建的对象。这些对象的生命周期较短，大部分对象很快就会变成垃圾。垃圾回收机制会频繁地对第 0 代进行回收，使用较轻量的垃圾回收算法，例如基于引用计数的垃圾回收。\n",
-    "\n",
-    "2. 第 1 代（Intermediate Generation）：当对象在第 0 代经历了一定数量的垃圾回收后，仍然存活下来的对象会被晋升到第 1 代。第 1 代中的对象相对于第 0 代来说，具有更长的生命周期。垃圾回收机制会相对较少地对第 1 代进行回收，使用更耗时的垃圾回收算法，例如标记-清除算法。\n",
-    "\n",
-    "3. 第 2 代（Old Generation）：第 2 代是存活时间最久的对象所在的代。这些对象的生命周期很长，只有很少一部分对象能够存活到这一代。垃圾回收机制会非常少地对第 2 代进行回收，使用更耗时的垃圾回收算法，例如标记-清除算法。\n",
-    "\n",
-    "分代回收策略的核心思想是：根据对象的存活时间将其分配到不同的代中，并根据代的特点采用不同的垃圾回收策略。这样可以更加高效地管理内存，因为大多数对象都在年轻代中被回收，而只有少数对象需要经历更耗时的回收操作。\n"
    ]
   }
  ],
