--- a/src/python3_course_for_devs/notebooks/bytes.ipynb
+++ b/src/python3_course_for_devs/notebooks/bytes.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 字节串\n"
+    "## 字节串\n",
+    "\n",
+    "不可变二进制数据类型。\n"
    ]
   },
   {
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +41,7 @@
        "b'foo'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,8 +51,126 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**使用 `bytes` 方法**\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ord(\"1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 由 `utf-8` 字符串编码\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'foo'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bytes(\"foo\", encoding=\"utf-8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'foo'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 使用 encode 方法编码\n",
+    "\"foo\".encode()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 由字节列表创建\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'foo'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bytes([102, 111, 111])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 由字节元组创建\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'foo'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bytes((102, 111, 111))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +179,7 @@
        "[102, 111, 111]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,59 +192,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**使用 `bytes` 方法**\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'foo'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bytes([102, 111, 111])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'foo'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"foo\".encode()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 字节数组\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +206,7 @@
        "bytearray(b'bar')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +226,7 @@
        "42"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,8 +235,6 @@
     "# 整数字面值字节串\n",
     "int(b\"42\")\n",
     "int(b\"101010\", base=2)  # 将二进制字节串 101010 转为整数\n",
-    "# int(bytes([72, 101, 108, 108, 111])) 错，必须是字面值，不支持转换构造函数创建的字节串\n",
-    "# int(b\"42\", base=2) 不行，42 不是二进制字节串\n",
     "\n",
     "\n",
     "# 整数字面值字节数组，规则同上\n",
