--- a/src/python3_course_for_devs/notebooks/memory.ipynb
+++ b/src/python3_course_for_devs/notebooks/memory.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 内存管理\n",
     "\n",
-    "内存管理由 Python 解释器自动处理，开发者无需显式地进行内存分配和释放。内存管理机制主要包括：\n"
+    "内存管理由 Python 解释器自动处理，开发者无需显式地进行内存分配和释放。\n"
    ]
   },
   {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "True"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 348,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "True"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 349,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "True"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 350,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "True"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 351,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,6 +151,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 回收算法\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**引用计数**\n",
     "\n",
     "每当对象被引用时，引用计数加 1；当引用被删除或超出作用域时，引用计数减 1。\n",
@@ -163,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +179,7 @@
        "2"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 352,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +204,7 @@
        "24"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 353,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +224,7 @@
        "3"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 354,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +246,7 @@
        "2"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 355,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,6 +255,107 @@
     "del ref  # 删除一次引用\n",
     "\n",
     "sys.getrefcount(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**标记清除算法**\n",
+    "\n",
+    "检测和回收不再被使用的对象。可处理循环引用。\n",
+    "\n",
+    "- 标记阶段：垃圾回收器从根对象递归遍历对象图，标记所有可达对象。全局变量和活动栈中的对象等都是根对象。\n",
+    "- 清除阶段：未标记对象和没有外部引用的循环引用对象被视为垃圾对象，遍历所有对象并回收垃圾对象。\n",
+    "\n",
+    "> 活动栈：包含函数调用上下文信息（局部变量、参数等）的栈结构。\n",
+    "\n",
+    "> 可达对象：指在程序中能够被访问到的对象，也就是与根对象之间存在引用链的对象。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 回收策略\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**分代回收**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 356,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 357,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(292, 6, 0)"
+      ]
+     },
+     "execution_count": 357,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gc.get_count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 358,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'collections': 206, 'collected': 1496, 'uncollectable': 0},\n",
+       " {'collections': 18, 'collected': 532, 'uncollectable': 0},\n",
+       " {'collections': 8, 'collected': 1173, 'uncollectable': 0}]"
+      ]
+     },
+     "execution_count": 358,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gc.get_stats()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 359,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(700, 10, 10)"
+      ]
+     },
+     "execution_count": 359,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gc.get_threshold()"
    ]
   }
  ],
