feat: yield from

--- a/src/python3_course_for_devs/notebooks/Iterator_generator.ipynb
+++ b/src/python3_course_for_devs/notebooks/Iterator_generator.ipynb
@@ -174,17 +174,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "子生成器开始\n",
       "1\n",
       "2\n",
       "3\n",
       "4\n",
+      "子生成器结束\n",
       "生成器遍历完成\n"
      ]
     }
@@ -193,11 +195,16 @@
     "try:\n",
     "    list = [1, 2, 3, 4]\n",
     "\n",
-    "    def my_generator(val: list):\n",
+    "    def child_generator(val: list):\n",
     "        for item in val:\n",
     "            yield item\n",
     "\n",
-    "    gen = my_generator(list)\n",
+    "    def generator(val: list):\n",
+    "        yield \"子生成器开始\"\n",
+    "        yield from child_generator(val)\n",
+    "        yield \"子生成器结束\"\n",
+    "\n",
+    "    gen = generator(list)\n",
     "\n",
     "    for item in gen:\n",
     "        print(item)\n",
