--- a/src/python3_course_for_devs/notebooks/memory.ipynb
+++ b/src/python3_course_for_devs/notebooks/memory.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "True"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "True"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "True"
       ]
      },
-     "execution_count": 350,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "True"
       ]
      },
-     "execution_count": 351,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "2"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "24"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "3"
       ]
      },
-     "execution_count": 354,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "2"
       ]
      },
-     "execution_count": 355,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,16 +298,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(292, 6, 0)"
+       "(285, 8, 10)"
       ]
      },
-     "execution_count": 357,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,18 +318,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'collections': 206, 'collected': 1496, 'uncollectable': 0},\n",
-       " {'collections': 18, 'collected': 532, 'uncollectable': 0},\n",
-       " {'collections': 8, 'collected': 1173, 'uncollectable': 0}]"
+       "[{'collections': 239, 'collected': 1598, 'uncollectable': 0},\n",
+       " {'collections': 21, 'collected': 532, 'uncollectable': 0},\n",
+       " {'collections': 1, 'collected': 10, 'uncollectable': 0}]"
       ]
      },
-     "execution_count": 358,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -349,13 +349,23 @@
        "(700, 10, 10)"
       ]
      },
-     "execution_count": 359,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "gc.get_threshold()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Garbage collection in Python: things you need to know](https://rushter.com/blog/python-garbage-collector/)\n",
+    "https://arctrix.com/nas/python/gc/\n",
+    "https://rushter.com/blog/python-memory-managment/\n",
+    "https://github.com/python/cpython/blob/7d6ddb96b34b94c1cbdf95baa94492c48426404e/Modules/gcmodule.c#L902\n"
    ]
   }
  ],
