--- a/src/python3_course_for_devs/notebooks/memory.ipynb
+++ b/src/python3_course_for_devs/notebooks/memory.ipynb
@@ -364,7 +364,9 @@
    "source": [
     "[Garbage collection in Python: things you need to know](https://rushter.com/blog/python-garbage-collector/)\n",
     "\n",
-    "[gc](https://github.com/python/cpython/blob/7d6ddb96b34b94c1cbdf95baa94492c48426404e/Modules/gcmodule.c#L902)\n"
+    "[The Garbage Collector](https://pythoninternal.wordpress.com/2014/08/04/the-garbage-collector/)\n",
+    "\n",
+    "[CPython GC](https://github.com/python/cpython/blob/7d6ddb96b34b94c1cbdf95baa94492c48426404e/Modules/gcmodule.c#L902)\n"
    ]
   },
   {
