--- a/src/python3_course_for_devs/notebooks/decorator.ipynb
+++ b/src/python3_course_for_devs/notebooks/decorator.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "'meta'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        "'meta'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,6 +105,42 @@
    "metadata": {},
    "source": [
     "装饰器类\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calling function: add\n",
+      "Function add finished execution\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class LogDecorator:\n",
+    "    def __init__(self, func):\n",
+    "        self.func = func\n",
+    "\n",
+    "    def __call__(self, *args, **kwargs):\n",
+    "        print(f\"Calling function: {self.func.__name__}\")\n",
+    "        result = self.func(*args, **kwargs)\n",
+    "        print(f\"Function {self.func.__name__} finished execution\")\n",
+    "        return result\n",
+    "\n",
+    "\n",
+    "@LogDecorator\n",
+    "def add(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "\n",
+    "result = add(2, 3)\n",
+    "print(result)"
    ]
   }
  ],
