--- a/src/python3_course_for_devs/notebooks/decorator.ipynb
+++ b/src/python3_course_for_devs/notebooks/decorator.ipynb
@@ -4,12 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 装饰器\n"
+    "# 装饰器\n",
+    "\n",
+    "装饰器本质上是一个函数，它接受一个函数作为输入，并返回一个新的函数作为输出。这个新的函数通常会在调用原始函数之前或之后执行一些额外的操作。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**装饰器函数**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +36,7 @@
        "'meta'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -72,13 +81,13 @@
        "'meta'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def greet(greeting, separator=\",\"):\n",
+    "def deco_wrap(greeting, separator=\",\"):\n",
     "    def deco_fn(orig_fn):\n",
     "        def wrap_fn(*args, **kwargs):\n",
     "            print(\"<=== before ===>\")\n",
@@ -92,7 +101,7 @@
     "    return deco_fn\n",
     "\n",
     "\n",
-    "@greet(greeting=\"hello\", separator=\",\")\n",
+    "@deco_wrap(greeting=\"hello\", separator=\",\")\n",
     "def hello(name):\n",
     "    return name\n",
     "\n",
@@ -104,12 +113,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "装饰器类\n"
+    "**装饰器类**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -124,14 +133,14 @@
    ],
    "source": [
     "class LogDecorator:\n",
-    "    def __init__(self, func):\n",
-    "        self.func = func\n",
+    "    def __init__(self, fn):\n",
+    "        self.fn = fn\n",
     "\n",
     "    def __call__(self, *args, **kwargs):\n",
-    "        print(f\"Calling function: {self.func.__name__}\")\n",
-    "        result = self.func(*args, **kwargs)\n",
-    "        print(f\"Function {self.func.__name__} finished execution\")\n",
-    "        return result\n",
+    "        print(f\"Calling function: {self.fn.__name__}\")\n",
+    "        ret = self.fn(*args, **kwargs)\n",
+    "        print(f\"Function {self.fn.__name__} finished execution\")\n",
+    "        return ret\n",
     "\n",
     "\n",
     "@LogDecorator\n",
@@ -141,6 +150,56 @@
     "\n",
     "result = add(2, 3)\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing DecoratedClass\n",
+      "Executing original_method\n",
+      "Executing decorated_method\n"
+     ]
+    }
+   ],
+   "source": [
+    "def class_decorator(cls):\n",
+    "    # 定义一个新的类\n",
+    "    class DecoratedClass(cls):\n",
+    "        def __init__(self, *args, **kwargs):\n",
+    "            # 在实例化新的类之前执行的操作\n",
+    "            print(\"Initializing DecoratedClass\")\n",
+    "            super().__init__(*args, **kwargs)\n",
+    "\n",
+    "        def decorated_method(self):\n",
+    "            # 在装饰的方法中执行的操作\n",
+    "            print(\"Executing decorated_method\")\n",
+    "\n",
+    "    return DecoratedClass\n",
+    "\n",
+    "\n",
+    "@class_decorator\n",
+    "class OriginalClass:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "\n",
+    "    def original_method(self):\n",
+    "        print(\"Executing original_method\")\n",
+    "\n",
+    "\n",
+    "# 实例化装饰过的类\n",
+    "decorated_instance = OriginalClass(10)\n",
+    "\n",
+    "# 调用原始方法\n",
+    "decorated_instance.original_method()\n",
+    "\n",
+    "# 调用装饰方法\n",
+    "decorated_instance.decorated_method()"
    ]
   }
  ],
